<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editCClass"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textAutoCorrect"
        android:hint="@string/characterClass"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cClass"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>
    <EditText
        android:id="@+id/editCRace"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textAutoCorrect"
        android:hint="@string/characterRace"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cRace"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>
    <EditText
        android:id="@+id/editCBackground"
        android:textSize="32sp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textAutoCorrect"
        android:hint="@string/characterBackground"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/cBackground"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>
</LinearLayout>