<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:padding="3dp"
    android:id="@+id/weaponCard">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/characterWeaponName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/weaponName"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/characterWeaponCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:text="@string/count"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/characterWeaponDamage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/damage"/>
            <TextView
                android:id="@+id/characterWeaponATKBonus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/ATKBonus"/>
            <TextView
                android:id="@+id/characterWeaponDamageType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"
                android:text="@string/type"/>
        </LinearLayout>
        <TextView
            android:id="@+id/characterWeaponDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weaponDescription"
            android:textSize="16sp"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>