<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3">

    <androidx.cardview.widget.CardView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsStrengthMod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/statsStrength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/strengthShort"
                android:imeOptions="actionNext"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/strength"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsDexterityMod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/statsDexterity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/dexterityShort"
                android:imeOptions="actionNext"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/dexterity"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsConstitutionMod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/statsConstitution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/constitutionShort"
                android:imeOptions="actionNext"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/constitution"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsIntelligenceMod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/statsIntelligence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/intelligenceShort"
                android:imeOptions="actionNext"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/intelligence"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsWisdomMod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/statsWisdom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/wisdomShort"
                android:imeOptions="actionNext"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/wisdom"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_columnWeight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_margin="3dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/statsCharismaMod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center_horizontal"/>
            <EditText
                android:id="@+id/statsCharisma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:inputType="number"
                android:importantForAutofill="no"
                android:hint="@string/charismaShort"
                android:imeOptions="actionDone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/charisma"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</GridLayout>