<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="4"
    android:rowCount="2">

    <TextView
        android:id="@+id/proficiencyBonus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/walkingSpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/initiative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/armorClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textSize="32sp"
        android:gravity="center_horizontal"/>



    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/proficiencyBonus"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/walkingSpeed"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/initiative"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/armorClass"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>
</GridLayout>