<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/skillWithBonus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:enabled="false"/>
        <TextView
            android:id="@+id/skillModifier"
            android:textSize="16sp"
            android:text="@string/modifierShort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/skillName"
            android:textSize="16sp"
            android:text="@string/skill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"/>
        <TextView
            android:id="@+id/skillBonus"
            android:textSize="16sp"
            android:text="@string/bonus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>